src/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Montserrat:wght@300;400;700&display=swap');

:root {
    /* color palette */
    --main-dark: #250C10;
    --main: #8C0375;
    --main-hover: #790465;
    --contrast: #F29A2E;
    --contrast-dark: #CE7910;
    --off-white: #F7FBFE;
    --grey-200: #E1E5E8;
    --grey-400: #C0C4C7;
    --grey-600: #8a8c8e;
    --off-black: #250C10;
    /*check in figma */

    /* font styles */
    --ff-main: "Montserrat", Arial, sans-serif;
    --ff-accent: "Courgette", "Lucida Handwriting", cursive;
    --fw-light: 200;
    --fw-regular: 400;
    --fw-bold: 700;

    /* various utility classes */
    --nav-height: 5rem;
}

html {
    scroll-behavior: smooth;
    font-size: 16px;
}

body {
    font-family: var(--ff-main);
    font-weight: var(--fw-regular);
}

/*******************************************************/
/******************** button styles ********************/
/*******************************************************/
/* link styled as a button */
.btn {
    background-color: var(--main);
    padding: 1rem;
    max-width: 400px;
    border-radius: 99px;
    text-transform: uppercase;
    color: var(--off-white);
    font-weight: var(--fw-bold);
    text-align: center;
    letter-spacing: 0.1rem;
    line-height: 2rem;
}

.btn:hover {
    background-color: var(--main-hover);
}

.btn:active {
    -webkit-transform: translate(0px, 2px);
    -moz-transform: translate(0px, 2px);
    -ms-transform: translate(0px, 2px);
    -o-transform: translate(0px, 2px);
    transform: translate(0px, 2px);
}

/* link styled as a button in the footer */
.footer-btn {
    background-color: var(--contrast);
   display: inline-block;
   margin: auto 2rem;
}

.footer-btn:hover {
    background-color: var(--contrast-dark);
    color: var(--off-white);
}


/*******************************************************/
/******************** navbar styles ********************/
/*******************************************************/

nav {
    background-color: var(--main-dark);
    display: flex;
    height: var(----nav-height);
    justify-content: space-between;
    align-items: center;
    color: var(--off-whitewhite);
    font-size: 1.1rem;
    position: sticky;
    top: 0;
    z-index: 999;
    -webkit-box-shadow: 2px 2px 24px 0px var(--off-black);
    -moz-box-shadow: 2px 2px 24px 0px var(--off-black);
    box-shadow: 2px 2px 24px 0px var(--off-black);
/* padding: 0 10rem; */
}


.nav-links {
    float: right;
}

.nav-links ul {
    display: flex;
    align-content: center;
    align-items: center;
}

.nav-links li {
    transition-duration: 0.2s;
}

.nav-links li:hover,
.nav-links li:active {
    background-color: var(--main);
}

.nav-links a {
    color: var(--off-white);
    text-decoration: none;
    height: var(--nav-height);
    display: flex;
    align-items: center;
    text-align: center;
    padding: 1rem;
}

/* burger icon styles */
#toggle-btn {
    position: absolute;
    top: 1.75rem;
    right: 2rem;
    display: none; /* hide by default */
    flex-direction: column;
    justify-content: space-between;
    width: 30px;
    height: 21px;
}

.bar {
    height: 3px;
    width: 100%;
    background-color: var(--off-white);
    border-radius: 10px;
}

@media (max-width: 700px) {
    #toggle-btn {
        display: flex;
    }

    .logo {
        /* position: fixed; */
        left: 45vw;
        top: 3vh;
        opacity: 50%;
    }

    nav {
        display: grid;
        padding: 0;
    }

    .nav-links {
        display: none;
    }

    .nav-links ul {
        display: grid;
    }

    .nav-links.active {
        display: grid;
        justify-content: center;
        width: 100vw;
        height: 100vh;
    }

    .nav-links.active a {
        text-align: center;
    }
}

/*******************************************************/
/********************  main styles  ********************/
/*******************************************************/
section {
    padding: 2rem;
}

section:nth-of-type(even) {
background-color: var(--grey-400);
}

.center {
    margin: auto;
    text-align: center;
}

/* hero section */

#about {
    background-color: rgba(18, 23, 37, 0.5);
    /* change color */
    background-image: url(../img/hero-bg.jpg);
    background-blend-mode: multiply;
    background-size: cover;
    height: 100vh;
    /* width: 100vw; */
    display: grid;
    justify-content: center;
    align-content: center;
}

hgroup {
    color: var(--off-white);
    width: 85vw;
    max-width: 600px;
    display: grid;
    text-align: center;
}

h1 {
    font-size: 1.625rem;
}

h2 {
font-size: 1.5rem;
    width: 150px;
   text-align: center; 
   color: var(--off-white);
   border-bottom: 1px solid var(--off-white); 
   line-height: 0.1rem;
   margin: 1rem;
}

h2 span {
    background-color: var(--grey-400);
    padding: 0 0.5rem;
}

h3 {
    font-weight: var(--fw-bold);
    padding: 2rem;
    font-size: 1.2rem;
}

h4 {
    color: var(--off-white);
    font-weight: var(--fw-bold);
}

#studio-masazu,
#subtitle {
    font-size: 0.9rem;
    font-weight: var(--fw-light);
    letter-spacing: 1.5px;
}

#studio-masazu {
text-align: left;
margin-bottom: 1.2rem;
}

#title {
    font-family: var(--ff-accent);
    font-size: clamp(2rem, 80vw, 5rem);
}

#subtitle {
    text-align: right;
    margin-top: 1.2rem;
}

.hero-p {
    font-weight: var(--fw-light);
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
    text-align: justify;
}

/* services section */

.section-header {
    display: grid;
    justify-content: center;
    align-content: center;
    margin-bottom: 2rem;
}

.cards {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    align-items: center;
  justify-content: center;
}

@media (min-width: 700px) {
    .cards {
        flex-direction: row;
        padding: 2rem;
    }
}

figure {
    display: grid;
    justify-content: center;
    align-content: center;
    -webkit-box-shadow: 0px 0px 24px 0px var(--grey-600);
    -moz-box-shadow: 0px 0px 24px 0px var(--grey-600);
    box-shadow: 0px 0px 24px 0px var(--grey-600);
}

figcaption {
    text-align: center;
    padding: 1rem 0;
    background-color: var(--main-dark);
    color: var(--off-white);
}

/* price section */
#prices {
    background-image: url(../img/hero-bg.jpg);
}

#prices h2>span {
    background-color: black; /* change this */
}

/* table */
table {
    background-color: var(--off-white);
    opacity: 0.7;
    backdrop-filter: blur(10px);
    margin: auto;
    border-radius: 0.5rem;
}

th, td {
    padding: 1rem;
}

@media (min-width: 600px) {
    th, td {
        padding: 1.5rem;
    }
}



th:nth-of-type(2),
td:nth-of-type(2) {
    text-align: right;
    font-weight: var(--fw-bold);
}

/* contact section */

.tables-contact-sctn {
    display: flex;
    flex-direction: column;
    width: 100%;    
  justify-content: space-around;
}

@media (min-width: 600px) {
    .tables-contact-sctn {
        flex-direction: row;
    }
}

.tables-contact-sctn article {
    background-color: var(--off-white);
    padding-bottom: 2rem;
    border-radius: 0.5rem;
    -webkit-box-shadow: 0px 0px 24px 0px var(--grey-600);
    -moz-box-shadow: 0px 0px 24px 0px var(--grey-600);
    box-shadow: 0px 0px 24px 0px var(--grey-600);
}


.tables-contact-sctn table {
    min-width: 400px;
    width: 35vw;
    max-width: 900px;
}

/* footer */
footer {
    background-color: var(--main-dark);
    padding: 2rem;
}


footer hr {
    width: 70vw;
    height: 1px;
    background-color: var(--grey-200);
    margin: 2rem auto;
}

footer p {
    color: var(--off-white);
    font-size: 0.8rem;
}

footer a {
    color: var(--contrast);
}

footer a:hover {
    color: var(--contrast-dark);
    cursor: pointer;
}

footer hgroup {
    text-align: left;
    width: 70vw;
}

h4 {
    margin: 1rem 0;
}

footer hgroup p {
    margin: 0.5rem 0;
}

.footer-top {
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-between;
    width: 70vw;
    margin: auto;
    padding-bottom: 2rem;
}

footer img {
    width: 100px;
    margin: 2rem auto;
}

.footer-info {
display: flex;
flex-direction: column;
margin: auto;
align-content: center;
gap: 2rem;
width: 70vw;
}

@media (min-width: 600px) {
    footer hgroup {
        width: 100%;
    }
    .footer-top {
        flex-direction: row;
    }

    .footer-info {
        flex-direction: row;
    }
}

